--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".GraphRssi"></activity>
+        <activity
+            android:name=".GraphRssi"
+            android:screenOrientation="landscape"
+        />
         <activity
             android:name=".AdapterInfo"
             android:screenOrientation="portrait" />
