--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".GraphRssi"
-            android:screenOrientation="landscape"
-        />
+            android:screenOrientation="landscape" />
         <activity
             android:name=".AdapterInfo"
             android:screenOrientation="portrait" />
